codegen/src/test/resources/bad/AbstractClass.java
import com.squareup.moshi.JsonClass;

@JsonClass(generateAdapter = true, generator = "java")
public abstract class AbstractClass {
    public int x;

    public abstract void foo();
}